manifest/thaijo.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: thaijo
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: thaijo-api
  namespace: thaijo
spec:
  replicas: 9
  selector:
    matchLabels:
      app: thaijo-api
  template:
    metadata:
      labels:
        app: thaijo-api
    spec:
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: DoNotSchedule
          labelSelector:
            matchLabels:
              app: thaijo-api
      containers:
        - name: api
          image: taotoxicboy/thaijo:dev-20260224.2
          imagePullPolicy: IfNotPresent
          command:
            - uvicorn
            - main:app
            - --host
            - 0.0.0.0
            - --port
            - "8000"
          ports:
            - containerPort: 8000
              name: http
---
apiVersion: v1
kind: Service
metadata:
  name: thaijo-api
  namespace: thaijo
spec:
  selector:
    app: thaijo-api
  ports:
    - name: http
      port: 80
      targetPort: 8000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: thaijo-api
  namespace: thaijo
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - thaijo.iaaaiksu.com
      secretName: thaijo-iaaaiksu-com-tls
  rules:
    - host: thaijo.iaaaiksu.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: thaijo-api
                port:
                  number: 80
